--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,7 +7,6 @@
     height: 100vh;
     position: relative;
     --fztitle: 84px;
-    --pdborder: 15px 50px;
     &__images{
       width: 100%;
       height: 100%;
@@ -383,12 +382,41 @@
       display: flex;
     }
     .textbox{
-      width: 600px;
+      max-width: 550px;
       padding: 180px 0;
       h2{
         &::before{
           display: none;
         }
+      }
+      .btn-video{
+        --pdborder: 15px 50px;
+        margin: 0;
+        cursor: pointer;
+        span{
+          font-size: 12px;
+          display: flex;
+          align-self: center;
+          justify-content: center;
+          letter-spacing: 4px;
+          font-family: pb;
+        }
+        i{
+          width: 25px;
+          height: 25px;
+          margin-right: 12px;
+        }
+      }
+    }
+    @include tablet{
+      .textbox{
+        text-align: left;
+      }
+    }
+    @include mobile{
+      .textbox{
+        text-align: left;
+        padding: 120px 0;
       }
     }
   }
@@ -396,7 +424,18 @@
   /** ------------------------------- 
     Component About
   */
-
+  .about{
+    .container{
+      display: grid;
+      grid-template-columns: 520px 1fr;
+      .textbox{
+        grid-area: 1/2/2/3;
+      }
+      .image{
+        grid-area: 1/1/2/2;
+      }
+    }
+  }
   /** ------------------------------- 
     Component Gallery
   */
