completed all pages Wooder

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -239,7 +239,6 @@
       }
     }
   }
-
   /** ------------------------------- 
     Component Product
   */ 
@@ -635,6 +634,41 @@
       max-width: 100%;
       min-width: 500px;
       overflow: hidden;
+    }
+  }
+}
+
+/* ------------------------------- 
+  Component navigation
+*/
+body{
+  .nav{
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    position: absolute;
+    z-index: 500;
+    background: #525151;
+    @include tablet{
+      display: block;
+      ul{
+        position: absolute;
+        z-index: 501;
+        top: 50%;
+        left: 50%;
+        @include transform(translate(-50%, -50%));
+        li{
+          margin: 30px;
+          text-align: center;
+          a{
+            text-decoration: none;
+            color: $white-cl;
+            letter-spacing: 8px;
+            font-family: pb;
+            font-size: 25px;
+          }
+        }
+      }
     }
   }
 }
