--- a/scss/core/_elements.scss
+++ b/scss/core/_elements.scss
@@ -41,36 +41,39 @@ img {
 }
 
 .btnmore{
-    text-decoration: none;
-    display: inline-flex;
-    color: $text-black-cl;
-    text-transform: uppercase;
-    font-family: pb;
-    letter-spacing: 3px;
-    position: relative;
-    margin-bottom: 30px;
-    opacity: 1;
-    @include transition($t);
-    &::after{
-        content: "";
-        width: 40px;
-        height: 1px;
-        background: $yellow-cl;
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-    }
-    img{
-      margin-left: 10px;
+  text-decoration: none;
+  display: inline-flex;
+  color: $text-black-cl;
+  text-transform: uppercase;
+  font-family: pb;
+  letter-spacing: 3px;
+  position: relative;
+  margin-bottom: 30px;
+  opacity: 1;
+  @include transition($t);
+  &::after{
+      content: "";
       width: 40px;
-    }
-    &:hover span{
-      opacity: 0.6;
+      height: 1px;
+      background: $yellow-cl;
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+  }
+  img{
+    margin-left: 10px;
+    width: 28px;
+  }
+  span{
+    @include mid(true);
+  }
+  &:hover span{
+    opacity: 0.6;
+    @include transition($t);
+  }
+  &:hover img{
+      margin-left: 18px;
       @include transition($t);
-    }
-    &:hover img{
-        margin-left: 18px;
-        @include transition($t);
-        opacity: 1;
-    }
+      opacity: 1;
+  }
 }
